# filianore-maya

./: .gitignore  .gitmodules  README.md  filianoremaya.mod
scripts/: AEflStandardSurfaceTemplate.mel  globalsNode.py  logger.py  menu.py  register.py  renderer.py
scripts/AETemplates/: AEflPlasticTemplate.mel
source/: CMakeLists.txt
source/filianore-maya/: CMakeLists.txt  README.md
source/filianore-maya/src/filianoremaya/: cameraexporter.cpp  cameraexporter.h  dagUtils.cpp  dagUtils.h  finalrendercommand.cpp  finalrendercommand.h  flplasticshaderoverride.cpp  flplasticshaderoverride.h  flstandardsurfaceshader.cpp  flstandardsurfaceshader.h  flstandardsurfaceshaderoverride.cpp  flstandardsurfaceshaderoverride.h  illuminantsexporter.cpp  illuminantsexporter.h  lambertnode.cpp  lambertnode.h  lambertshader.cpp  lambertshader.h  materialprocessor.cpp  materialprocessor.h  materialprocessorutil.cpp  materialprocessorutil.h  matteshader.cpp  matteshader.h  matteshadernode.cpp  matteshadernode.h  meshexporter.cpp  meshexporter.h  mirrormaterialnode.cpp  mirrormaterialnode.h  mirrorshader.cpp  mirrorshader.h  plasticshader.cpp  plasticshader.h  plasticshadernode.cpp  plasticshadernode.h  pluginmain.cpp  rendercontext.h  renderglobalsnode.cpp  renderglobalsnode.h  (+2 more)
source/src/filianoremaya/: dagUtils.h  finalrendercommand.cpp  flplasticshader.cpp  flplasticshader.h  flstandardsurfaceshader.cpp  flstandardsurfaceshader.h  illuminantsexporter.cpp  illuminantsexporter.h  materialprocessor.cpp  materialprocessor.h  materialprocessorutil.cpp  meshexporter.cpp  renderglobalsnode.cpp  renderglobalsnode.h
